[package]
name = "rusty-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
capstone = "0.13.0"
gimli = "0.32.0"
goblin = "0.10.0"
libc = "0.2.174"
log = "0.4.27"
memmap2 = "0.9.7"
mockall = "0.13.1"
nix = { version = "0.30", features = ["process", "ptrace", "signal"] }
object = "0.37.1"
